tests/ui/nll/user-annotations/constant-in-expr-trait-item-1.stderr
error: lifetime may not live long enough
  --> $DIR/constant-in-expr-trait-item-1.rs:10:5
   |
LL | fn foo<'a>(_: &'a u32) -> &'static u32 {
   |        -- lifetime `'a` defined here
LL |     <() as Foo<'a>>::C
   |     ^^^^^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to previous error

